--- a/index.html
+++ b/index.html
@@ -143,21 +143,21 @@
   </ul>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="C:\Users\Hung\Desktop\web2\Image\h.jpg" alt="first bg image" width="1550" height="650">
+      <img src="Image\h.jpg" alt="first bg image" width="1550" height="650">
       <div class="carousel-caption">
         <h2>Ocean</h2>
         <h3>The beautiful sea</h3>
       </div>   
     </div>
     <div class="carousel-item">
-      <img src="C:\Users\Hung\Desktop\web2\Image\g.jpg" alt="Chicago" width="1550" height="650">
+      <img src="Image\g.jpg" alt="Chicago" width="1550" height="650">
       <div class="carousel-caption">
         <h2>Seabed</h2>
         <h3>Becareful!</h3>
       </div>   
     </div>
     <div class="carousel-item">
-      <img src="C:\Users\Hung\Desktop\web2\Image\i.jpg" alt="New York" width="1550" height="650">
+      <img src="Image\i.jpg" alt="New York" width="1550" height="650">
       <div class="carousel-caption">
         <h2>Escape</h2>
         <h3>Hurry up!</h3>
@@ -179,7 +179,7 @@
     <hr class="w-100 pt-4"> <!-- hr is the ine under about us-->
     <div class="row">
       <div class="col">
-        <img src="C:\Users\Hung\Desktop\web2\Image\hhe.jpg" class="img-fluid" width="500" height="500">
+        <img src="Image\hhe.jpg" class="img-fluid" width="500" height="500">
       </div>
       <div class="col">
         <h2>Our Story</h2>
