--- a/About us.html
+++ b/About us.html
@@ -61,7 +61,7 @@
     "> <!-- hr is the ine under about us-->
     <div class="row">
       <div class="col">
-        <img src="C:\Users\Hung\Desktop\web2\Image\hhe.jpg" class="img-fluid" width="500" height="500">
+        <img src="Image\hhe.jpg" class="img-fluid" width="500" height="500">
       </div>
       <div class="col">
         <h2>Our Story</h2>
@@ -138,7 +138,7 @@
 <div class="row">
   <div class="column">
     <div class="card">
-      <img src="C:\Users\Hung\Desktop\web2\Image\r4.jpg" alt="Jane" width="100%">
+      <img src="Image\r4.jpg" alt="Jane" width="100%">
       <div class="container">
         <h2>Jane Foster</h2>
         <p class="title">CEO & Founder</p>
@@ -151,7 +151,7 @@
 
   <div class="column">
     <div class="card">
-      <img src="C:\Users\Hung\Desktop\web2\Image\r5.jpg" alt="Mike" width="100%">
+      <img src="Image\r5.jpg" alt="Mike" width="100%">
       <div class="container">
         <h2>Julia Viloet</h2>
         <p class="title">Art Director</p>
@@ -164,7 +164,7 @@
   
   <div class="column">
     <div class="card">
-      <img src="C:\Users\Hung\Desktop\web2\Image\r6.jpg" alt="John" width="100%">
+      <img src="Image\r6.jpg" alt="John" width="100%">
       <div class="container">
         <h2>Sasa Kiky</h2>
         <p class="title">Photographer</p>
