--- a/Gallery.html
+++ b/Gallery.html
@@ -107,16 +107,16 @@
   <!-- The grid: four columns -->
 <div class="row">
   <div class="column">
-    <img src="C:\Users\Hung\Desktop\web2\Image\phongcanh.jpg" alt="Nature" style="width: 100%" onclick="myFunction(this);">
+    <img src="Image\phongcanh.jpg" alt="Nature" style="width: 100%" onclick="myFunction(this);">
   </div>
   <div class="column">
-    <img src="C:\Users\Hung\Desktop\web2\Image\phongcanh3.jpg" alt="Snow" style="width: 100%" onclick="myFunction(this);">
+    <img src="Image\phongcanh3.jpg" alt="Snow" style="width: 100%" onclick="myFunction(this);">
   </div>
   <div class="column">
-    <img src="C:\Users\Hung\Desktop\web2\Image\phongcanh2.jpg" alt="Mountains" style="width: 100%" onclick="myFunction(this);">
+    <img src="Image\phongcanh2.jpg" alt="Mountains" style="width: 100%" onclick="myFunction(this);">
   </div>
   <div class="column">
-    <img src="C:\Users\Hung\Desktop\web2\Image\hihiii.jpg" alt="Road" style="width: 100%" onclick="myFunction(this);">
+    <img src="Image\hihiii.jpg" alt="Road" style="width: 100%" onclick="myFunction(this);">
   </div>
 </div>
 
