--- a/blog.html
+++ b/blog.html
@@ -145,7 +145,7 @@
       <h2>Go to travel</h2>
       <h5>Ha Noi, Nov 3, 2020</h5>
       <br>
-      <img src="C:\Users\Hung\Desktop\web2\Image\hanoi2.jpg" alt="first bg image" width="1080" height="600">
+      <img src="Image\hanoi2.jpg" alt="first bg image" width="1080" height="600">
       <br>
       <p>Travel is fun. It is a fantastic adventure. More than that, however, travel can enrich your life in numerous ways.</p>
     </div>
@@ -153,7 +153,7 @@
       <h2>Relax</h2>
       <h5>London, Sep 2, 2020</h5>
       <br>
-      <img src="C:\Users\Hung\Desktop\web2\Image\London2.jpg" alt="first bg image" width="1080" height="600">
+      <img src="Image\London2.jpg" alt="first bg image" width="1080" height="600">
       <br>
       <p>Travel is fun. It is a fantastic adventure. More than that, however, travel can enrich your life in numerous ways.</p>
     </div>
@@ -163,7 +163,7 @@
       <h2>About Me</h2>
       <br>
 
-      <img src="C:\Users\Hung\Desktop\web2\Image\HMH.jpg" alt="first bg image" width="320" height="320">
+      <img src="Image\HMH.jpg" alt="first bg image" width="320" height="320">
       <br>
       <p>Name: Manh Hung</p>
       <p>Date of birth: 07/06/1999</p>
@@ -171,11 +171,11 @@
     </div>
     <div class="card">
       <h3>Popular Post</h3>
-      <img src="C:\Users\Hung\Desktop\web2\Image\Sapa.jpg" alt="first bg image" width="320" height="180">
+      <img src="Image\Sapa.jpg" alt="first bg image" width="320" height="180">
       <br>
-      <img src="C:\Users\Hung\Desktop\web2\Image\Hawaii.jpeg" alt="first bg image" width="320" height="180">
+      <img src="Image\Hawaii.jpeg" alt="first bg image" width="320" height="180">
       <br>
-      <img src="C:\Users\Hung\Desktop\web2\Image\London.jpg" alt="first bg image" width="320" height="180">    </div>
+      <img src="Image\London.jpg" alt="first bg image" width="320" height="180">    </div>
     <div class="card">
       <h3>Follow Me</h3>
       <a href="https://www.facebook.com/">https://www.facebook.com/</a>
